--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=9090
 
-security.oauth2.resource.token-info-uri=http://localhost:9000/oauth/check_token
-security.oauth2.client.client-id=resourceserver
-security.oauth2.client.client-secret=resourceserversecret
+#security.oauth2.resource.token-info-uri=http://localhost:9000/oauth/check_token
+#security.oauth2.client.client-id=resourceserver
+#security.oauth2.client.client-secret=resourceserversecret
+
+spring.datasource.url=jdbc:mysql://localhost/spring_security?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
