--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=9090
 #security.oauth2.client.client-id=resourceserver
 #security.oauth2.client.client-secret=resourceserversecret
 
-spring.datasource.url=jdbc:mysql://localhost/spring_security?useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost/spring_security?useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+
+jwt.key=ymLTU8rq83j4fmJZj60wh4OrMNuntIj4fmJ
